--- a/carmaker/.project
+++ b/carmaker/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>carmaker</name>
+	<name>20180410 - carmaker</name>
 	<comment></comment>
 	<projects>
 	</projects>
