--- a/20180411 - demo-smallmart/pom.xml
+++ b/20180411 - demo-smallmart/pom.xml
@@ -35,6 +35,12 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+		
+		<dependency>
+		    <groupId>org.apache.maven.plugins</groupId>
+		    <artifactId>maven-resources-plugin</artifactId>
+		    <version>2.4.3</version>
+		</dependency>
 	</dependencies>
 
 	<build>
