--- a/20180416 - mvc1/pom.xml
+++ b/20180416 - mvc1/pom.xml
@@ -54,6 +54,12 @@
 			<artifactId>tomcat-embed-jasper</artifactId>
 			<scope>provided</scope>
 		</dependency>
+		
+		<dependency>
+		    <groupId>org.apache.maven.plugins</groupId>
+		    <artifactId>maven-resources-plugin</artifactId>
+		    <version>2.4.3</version>
+		</dependency>
 	</dependencies>
 
 	<build>
