--- a/user-portal/src/main/resources/application.properties
+++ b/user-portal/src/main/resources/application.properties
@@ -1,8 +1,8 @@
-server.servlet.context-path=/user-portal
 spring.datasource.url=jdbc:mysql://localhost:3306/testdb
 spring.datasource.username=root
 spring.datasource.password=1234
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.hibernate.naming.implicit-strategy=org.hibernate.boot.model.naming.ImplicitNamingStrategyLegacyHbmImpl
 spring.jpa.hibernate.naming.physical-strategy=org.springframework.boot.orm.jpa.hibernate.SpringPhysicalNamingStrategy
