--- a/TaskAngular_user-portal/src/main/resources/application.properties
+++ b/TaskAngular_user-portal/src/main/resources/application.properties
@@ -7,5 +7,5 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.hibernate.naming.implicit-strategy=org.hibernate.boot.model.naming.ImplicitNamingStrategyLegacyHbmImpl
 spring.jpa.hibernate.naming.physical-strategy=org.springframework.boot.orm.jpa.hibernate.SpringPhysicalNamingStrategy
 
-spring.mvc.view.prefix=/
+spring.mvc.view.prefix=/webapp/WEB-INF/
 spring.mvc.view.suffix=.jsp
