--- a/.recommenders/caches/identified-project-coordinates.json
+++ b/.recommenders/caches/identified-project-coordinates.json
@@ -1,1 +1,1 @@
-{}
+[[{"location":"C:\\Users\\수연\\git\\TopCredu-Study-Spring\\TaskAngular_user-portal","type":"PROJECT","hints":{"PROJECT_NAME":"TaskAngular_user-portal"}},"com.devglan:user-portal:0.0.1"],[{"location":"C:\\Program Files\\Java\\jre-9","type":"JRE","hints":{"EXECUTION_ENVIRONMENT":"JavaSE-1.8"}},"jre:jre:1.8.0"]]
