--- a/20180430 - hello3/src/main/webapp/WEB-INF/web.xml
+++ b/20180430 - hello3/src/main/webapp/WEB-INF/web.xml
@@ -6,7 +6,11 @@
 	<!-- The definition of the Root Spring Container shared by all Servlets and Filters -->
 	<context-param>
 		<param-name>contextConfigLocation</param-name>
-		<param-value>/WEB-INF/spring/root-context.xml</param-value>
+		<param-value>
+			/WEB-INF/applicationContext.xml,
+			/WEB-INF/insaServlet-servlet.xml,
+			/WEB-INF/saleServlet-servlet.xml				
+		</param-value>
 	</context-param>
 	
 	<!-- Creates the Spring Container shared by all Servlets and Filters -->
@@ -14,20 +18,26 @@
 		<listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
 	</listener>
 
-	<!-- Processes application requests -->
+	<!-- 인사관리 -->
 	<servlet>
-		<servlet-name>appServlet</servlet-name>
+		<servlet-name>insaServlet</servlet-name>
 		<servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
-		<init-param>
-			<param-name>contextConfigLocation</param-name>
-			<param-value>/WEB-INF/spring/appServlet/servlet-context.xml</param-value>
-		</init-param>
-		<load-on-startup>1</load-on-startup>
 	</servlet>
-		
+
 	<servlet-mapping>
-		<servlet-name>appServlet</servlet-name>
-		<url-pattern>/</url-pattern>
+		<servlet-name>insaServlet</servlet-name>
+		<url-pattern>/insa</url-pattern>
+	</servlet-mapping>
+
+	<!-- 영업관리 -->
+	<servlet>
+		<servlet-name>saleServlet</servlet-name>
+		<servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
+	</servlet>
+
+	<servlet-mapping>
+		<servlet-name>saleServlet</servlet-name>
+		<url-pattern>/sale</url-pattern>
 	</servlet-mapping>
 
 </web-app>
